# Netlist-Placement-and-Routing-Simulator

./: ArchitectureReview.txt  CMakeLists.txt  README.md
include/: Graph.h  Netlist.h  Placement.h  Routing.h  Visualization.h
include/analyzer/: GraphAnalyzer.h
include/models/: Analysis.h  Edge.h  Graph.h  Node.h  Position.h  Route.h
include/parser/: NetlistParser.h
include/placement/: PlacementEngine.h
include/routing/: RoutingEngine.h
include/visualization/: SvgExporter.h
src/: Graph.cpp  Netlist.cpp  Placement.cpp  Routing.cpp  Visualization.cpp  main.cpp
src/analyzer/: GraphAnalyzer.cpp
src/models/: Graph.cpp
src/parser/: NetlistParser.cpp
src/placement/: PlacementEngine.cpp
src/routing/: RoutingEngine.cpp
src/visualization/: SvgExporter.cpp
